@@ -1,0 +1,9 @@
+EXTRA_DIST = \
+	changelog control copyright rules \
+	liblog4cpp0-dev.dirs \
+	liblog4cpp0-dev.files \
+	liblog4cpp0-doc.dirs \
+	liblog4cpp0-doc.files \
+	liblog4cpp0.dirs \
+	liblog4cpp0.files \
+	liblog4cpp0.postinst
